// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update legacy input adds TODO for dynamic [tuiTextfieldLabelOutside] without wrapping: test.html 1`] = `
{
  "0. Before": "<tui-input formControlName="value" [tuiTextfieldLabelOutside]="isOutside">Label</tui-input>",
  "1. After": "<!-- TODO: (Taiga UI migration) tui-input migration (see https://taiga-ui.dev/components/input):
     - [tuiTextfieldLabelOutside]="isOutside" is dynamic and cannot be migrated automatically. Use <label tuiLabel> inside <tui-textfield> for floating label or outside for static label.
-->
<tui-textfield>
<label tuiLabel>Label</label>
<input tuiInput formControlName="value" />
</tui-textfield>",
}
`;

exports[`ng-update legacy input drops [tuiTextfieldLabelOutside]="false" without wrapping: test.html 1`] = `
{
  "0. Before": "<tui-input formControlName="value" [tuiTextfieldLabelOutside]="false">Label</tui-input>",
  "1. After": "<tui-textfield>
<label tuiLabel>Label</label>
<input tuiInput formControlName="value" />
</tui-textfield>",
}
`;

exports[`ng-update legacy input handles tui-input without text content: test.html 1`] = `
{
  "0. Before": "<tui-input formControlName="value"></tui-input>",
  "1. After": "<tui-textfield>
<input tuiInput formControlName="value" />
</tui-textfield>",
}
`;

exports[`ng-update legacy input migrates TuiInputModule import and simple tui-input template: test.html 1`] = `
{
  "0. Before": "<tui-input formControlName="value">Enter name</tui-input>",
  "1. After": "<tui-textfield>
<label tuiLabel>Enter name</label>
<input tuiInput formControlName="value" />
</tui-textfield>",
}
`;

exports[`ng-update legacy input migrates TuiInputModule import and simple tui-input template: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputModule} from '@taiga-ui/legacy';

                @Component({
                  standalone: true,
                  imports: [TuiInputModule],
                  templateUrl: './test.html',
                })
                export class TestComponent {}
            ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

                                @Component({
                  standalone: true,
                  imports: [TuiInput],
                  templateUrl: './test.html',
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update legacy input migrates multiple tui-input elements in one template: test.html 1`] = `
{
  "0. Before": "
                <tui-input formControlName="a">First</tui-input>
                <tui-input formControlName="b">Second</tui-input>
            ",
  "1. After": "
                <tui-textfield>
                <label tuiLabel>First</label>
                <input tuiInput formControlName="a" />
                </tui-textfield>
                <tui-textfield>
                <label tuiLabel>Second</label>
                <input tuiInput formControlName="b" />
                </tui-textfield>
            ",
}
`;

exports[`ng-update legacy input migrates tui-input wrapper attrs and routes them correctly: test.html 1`] = `
{
  "0. Before": "
                <tui-input
                    formControlName="value"
                    tuiHintContent="Hint"
                    tuiTextfieldSize="s"
                    [tuiTextfieldCleaner]="true"
                >
                    Email
                </tui-input>
            ",
  "1. After": "
                <tui-textfield tuiTextfieldSize="s" [tuiTextfieldCleaner]="true">
                <label tuiLabel>Email</label>
                <input tuiInput formControlName="value" />
<tui-icon tuiTooltip="Hint" />
                </tui-textfield>
            ",
}
`;

exports[`ng-update legacy input migrates tuiHintDirection value alongside wrapper attrs: test.html 1`] = `
{
  "0. Before": "
                <tui-input
                    formControlName="value"
                    tuiHintContent="Hint"
                    tuiHintDirection="bottom-right"
                >
                    Label
                </tui-input>
            ",
  "1. After": "
                <tui-textfield>
                <label tuiLabel>Label</label>
                <input tuiInput formControlName="value" />
<tui-icon tuiTooltip="Hint" tuiHintDirection="bottom-end" />
                </tui-textfield>
            ",
}
`;

exports[`ng-update legacy input places unrecognized attributes on <tui-textfield> with TODO per attr: test.html 1`] = `
{
  "0. Before": "<tui-input formControlName="value" someCustomDir [anotherDir]="config">Label</tui-input>",
  "1. After": "<!-- TODO: (Taiga UI migration) tui-input migration (see https://taiga-ui.dev/components/input):
     - "someCustomDir" is an unrecognized attribute and was placed on <tui-textfield>. Move it to <input tuiInput> if it targets the native element.
     - "[anotherDir]" is an unrecognized attribute and was placed on <tui-textfield>. Move it to <input tuiInput> if it targets the native element.
-->
<tui-textfield someCustomDir [anotherDir]="config">
<label tuiLabel>Label</label>
<input tuiInput formControlName="value" />
</tui-textfield>",
}
`;

exports[`ng-update legacy input renames tuiTextfieldCustomContent to content and tuiTextfieldFiller to filler: test.html 1`] = `
{
  "0. Before": "<tui-input formControlName="value" [tuiTextfieldCustomContent]="myTpl" [tuiTextfieldFiller]="hint">Label</tui-input>",
  "1. After": "<tui-textfield [content]="myTpl" [filler]="hint">
<label tuiLabel>Label</label>
<input tuiInput formControlName="value" />
</tui-textfield>",
}
`;

exports[`ng-update legacy input renames tuiTextfieldIconLeft to iconStart and tuiTextfieldIcon to iconEnd on wrapper: test.html 1`] = `
{
  "0. Before": "
                <tui-input
                    formControlName="value"
                    [tuiTextfieldIcon]="iconEnd"
                    [tuiTextfieldIconLeft]="iconStart"
                >
                    Label
                </tui-input>
            ",
  "1. After": "
                <tui-textfield [iconEnd]="iconEnd" [iconStart]="iconStart">
                <label tuiLabel>Label</label>
                <input tuiInput formControlName="value" />
                </tui-textfield>
            ",
}
`;

exports[`ng-update legacy input reuses inner <input tuiTextfieldLegacy> and preserves its attrs: test.html 1`] = `
{
  "0. Before": "
                <tui-input formControlName="value">
                    Email
                    <input
                        autocomplete="email"
                        placeholder="[Email]"
                        tuiTextfieldLegacy
                        type="email"
                    />
                </tui-input>
            ",
  "1. After": "
                <tui-textfield>
                <input
                        autocomplete="email"
                        placeholder="[Email]"
                        tuiInput
                        type="email" formControlName="value"/>
                </tui-textfield>
            ",
}
`;

exports[`ng-update legacy input routes dropdown attrs to wrapper and adds TODO for prefix/postfix: test.html 1`] = `
{
  "0. Before": "
                <tui-input
                    formControlName="value"
                    tuiDropdownDirection="top"
                    tuiTextfieldPostfix="USD"
                    tuiTextfieldPrefix="$"
                    [tuiDropdownLimitWidth]="'fixed'"
                >
                    Amount
                </tui-input>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input migration (see https://taiga-ui.dev/components/input):
     - tuiTextfieldPostfix, tuiTextfieldPrefix has no direct equivalent in v5. Implement using custom content inside <tui-textfield>.
-->
                <tui-textfield tuiDropdownDirection="top" tuiTextfieldPostfix="USD" tuiTextfieldPrefix="$" [tuiDropdownLimitWidth]="'fixed'">
                <label tuiLabel>Amount</label>
                <input tuiInput formControlName="value" />
                </tui-textfield>
            ",
}
`;

exports[`ng-update legacy input wraps in <label tuiLabel> when [tuiTextfieldLabelOutside]="true": test.html 1`] = `
{
  "0. Before": "
                <tui-input
                    formControlName="value"
                    [tuiTextfieldLabelOutside]="true"
                >
                    Email
                </tui-input>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input migration (see https://taiga-ui.dev/components/input):
     - Text content "Email" became placeholder on <input> (labelOutside=true). Add <label tuiLabel> outside <tui-textfield> if a static label is needed.
-->
                <tui-textfield>
                <input placeholder="Email" tuiInput formControlName="value" />
                </tui-textfield>
            ",
}
`;
